translate all interactive items on boat cabin level

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -13,54 +13,54 @@
     <Entry Name="StragePlace">[u1056][u1091][u1089][u1089][u1082][u1080][u1081] [u1103][u1079][u1099][u1082]</Entry>
   </CATEGORY>
   <CATEGORY Name="00_01_boat_cabin">
-    <Entry Name="BoatHorn01">Finally, we're almost docked, I'd better stow my gear. I may be far from home, but chances are I can still pick things up using "</Entry>
-    <Entry Name="PadLock01">Always travel with a padlock. And a key, preferably. Mine's in the inventory (</Entry>
-    <Entry Name="Locker01">The crew seemed friendly enough, but just in case, I locked up my valuables. I'm pretty sure the key's in my Inventory somewhere. Once I've found it, double-clicking the left mouse button should get it selected, then I can press Interact on the padlock to unlock it.</Entry>
-    <Entry Name="BoatHorn02">" and I can take a closer look at things using "</Entry>
-    <Entry Name="TutorialFlashLight01">Good thing I have my torch (</Entry>
-    <Entry Name="TutorialFlashLight02">) at hand, this country seems to exist in a permanent state of twilight.</Entry>
-    <Entry Name="TutorialFlashLight03">There's not much light in here, my flashlight could come in handy.</Entry>
-    <Entry Name="TutorialFlashLight04">The flashlight switches on and off via the Inventory (</Entry>
-    <Entry Name="TutorialFlashLight05">) or, hopefully, with the shortcut key "</Entry>
-    <Entry Name="TutorialBattery01">Ah, some extra batteries to power my flashlight.</Entry>
-    <Entry Name="TutorialNotebook01">Always good to have a notebook (</Entry>
-    <Entry Name="TutorialNotebook02">) to jot down interesting information and reminders (</Entry>
-    <Entry Name="TutorialMapfolder01">Could come in handy if the torch runs out of batteries. I should be able to access it through my inventory or with the shortcut key "</Entry>
-    <Entry Name="LockerHelp01">Now, where's that emergency glowstick? Should still be in the locker, key's in my Inventory (</Entry>
-    <Entry Name="EndLevel01">That should be everything I need. I want to get going before dark.</Entry>
-    <Entry Name="ExitDoorDesc">It leads out onto the deck, but I don't fancy braving that weather until I have to.</Entry>
-    <Entry Name="MapDesc">I'm certain this map's a good decade or so out of date, but landmarks don't change much in Greenland, so I've got a pretty decent idea of where I'm heading.</Entry>
-    <Entry Name="BedDesc">Pretty odorous. Glad I'm getting out of here soon, they must eat, and sleep, and... well, do everything else in this one room, for weeks at a time.</Entry>
-    <Entry Name="Coffin01Desc">From the smell, I'd say there's an equal chance they use this chest for personal belongings, or bait.</Entry>
-    <Entry Name="SmallTableDesc">It's a rickety wooden desk. I can get that drawer open if I just hold the Interact button and drag with the mouse.</Entry>
-    <Entry Name="Window01Desc">This fog closed in on us almost as soon as we left port. Haven't seen any landmarks for ages now, I don't know how they're managing to navigate, I'd be as good as lost at sea if I was on my own. Not a thought worth thinking.</Entry>
-    <Entry Name="Window02Desc">Somewhere out there must be land. And answers.</Entry>
-    <Entry Name="WhiskeyBottle01Desc">Whiskey. Empty. Shame.</Entry>
+    <Entry Name="BoatHorn01">Нарэшце, мы амаль прычалілі, лепей пачынаць збіраць рыштунак. Можа я і ў далечы ад дому, але магчыма ўсё яшчэ магу падбіраць рэчы, выкарыстоўваючы "</Entry>
+    <Entry Name="PadLock01">Заўсёды падарожнічайце з замком. І з ключом, пераважна. Мой ў інвентары (</Entry>
+    <Entry Name="Locker01">Каманда паказалася мне даволі прыязнай, але на ўсякі выпадак, я зачыніў свае каштоўнасці. Ўпэўнены, ключ недзе ў маім Інвентары. Як толькі знайду, яго можна будзе выбраць двайным клікам левай кнопкі мышы, потым я магу націснуць Узаемадзейнічаць на замку і ён адкрыецца.</Entry>
+    <Entry Name="BoatHorn02">" і дэталёва аглядваць рэчы, выкарыстоўваючы "</Entry>
+    <Entry Name="TutorialFlashLight01">Добра, што ў мяне ёсць ліхтарык (</Entry>
+    <Entry Name="TutorialFlashLight02">) пад рукою, гэтая краіна нібы існуе ў пастаяннай шарай гадзіне.</Entry>
+    <Entry Name="TutorialFlashLight03">Тут не надта многа святла, мой ліхтарык быў бы зручным.</Entry>
+    <Entry Name="TutorialFlashLight04">Ліхтарык уключаецца праз Інвентар (</Entry>
+    <Entry Name="TutorialFlashLight05">) або, надзейна, праз клавішу "</Entry>
+    <Entry Name="TutorialBattery01">Ах, яшчэ крыху батарэек для майго ліхтарыка.</Entry>
+    <Entry Name="TutorialNotebook01">Заўсёды добра мець нататнік (</Entry>
+    <Entry Name="TutorialNotebook02">) каб хутка занатаваць інфармацыю або запісаць напамінак. (</Entry>
+    <Entry Name="TutorialMapfolder01">Можа спатрэбіцца, калі скончацца батарэйкі на ліхтарык. Я магу выкарыстоўваць яго праз інвентар або праз клавішу "</Entry>
+    <Entry Name="LockerHelp01">Цяпер, дзе тая ХКС? Павінна быць у шафе, ключ у мяне ў Інвентары (</Entry>
+    <Entry Name="EndLevel01">Гэта павінна быць усё, што мне трэба. Я хачу выйсці пакуль не сцямнела.</Entry>
+    <Entry Name="ExitDoorDesc">Вядзе на палубу, але я не хацеў бы змагацца з надвор'ем, пакуль гэта не спатрэбіцца.</Entry>
+    <Entry Name="MapDesc">Я ўпэўнены, што гэтая мапа ўстарэла на дзесяцігоддзі ці каля таго, але арыенціры не вельмі часта змяняюцца ў Грэнландыі, таму я вельмі добра ўяўляю, куды напраўляюся.</Entry>
+    <Entry Name="BedDesc">Даволі пахучы. Добра, што я хутка зыходжу, яна павінны былі есці, спаць, і... ну, рабіць іншыя рэчы ў гэтым пакоі ўжо на працягу некалькіх тыдняў.</Entry>
+    <Entry Name="Coffin01Desc">Па гэтаму смуроду, магу сказаць, што тут аднолькавы шанец, што яны хаваюць у гэтым куфры і асабістыя рэчы, і прынаду.</Entry>
+    <Entry Name="SmallTableDesc">Гэта хліпкі драўляны стол. Я магу адкрыць шуфляду, калі зацісну кнопку Ўзаемадзеяння і пацягну мыш.</Entry>
+    <Entry Name="Window01Desc">Туман апусціўся амаль пасля таго, як мы выйшлі з порту. Не было бачна аніякай зямлі ўжо невядома колькі, не ведаю як ім удаецца спраўляцца з навігацыяй, я б быў як загублены сярод мора на іх месцы. Не хачу нават думаць.</Entry>
+    <Entry Name="Window02Desc">Недзе там павінна быць зямля. І адказы.</Entry>
+    <Entry Name="WhiskeyBottle01Desc">Бутэлька віскі. Пустая. Шкада.</Entry>
     <Entry Name="LockerHelp02">Mustn't forget that glowstick from the locker.</Entry>
-    <Entry Name="TutorialDrawer01">I think I left my torch in the desk drawer next to the bed. It can be opened using my "</Entry>
-    <Entry Name="TutorialDrawer02">" on it, holding the button down and moving the mouse.</Entry>
+    <Entry Name="TutorialDrawer01">Здаецца, я аставіў свой ліхтарык у шуфлядзе стала каля ложка. Яна можа быць адкрытая выкарыстаннем "</Entry>
+    <Entry Name="TutorialDrawer02">" на ёй, трыманнем клавішы і перацягваннем мышы.</Entry>
     <Entry Name="DescPoster">Playboy poster. It's nice some things don't change no matter how far you are from home.</Entry>
     <Entry Name="DescPicture">A photo of the fisherman's wife. She's no playboy bunny, but she looks loving and kind.</Entry>
   </CATEGORY>
   <CATEGORY Name="Items">
-    <Entry Name="Battery">Battery</Entry>
-    <Entry Name="BatteryDesc">Fully charged batteries.</Entry>
+    <Entry Name="Battery">Батарэйкі</Entry>
+    <Entry Name="BatteryDesc">Батарэйкі з поўным зарадам.</Entry>
     <Entry Name="Dynamite">Dynamite</Entry>
     <Entry Name="DynamiteDesc">I try not to be in the habit of handling old explosives, but I guess needs must.</Entry>
     <Entry Name="Flare">Flare</Entry>
     <Entry Name="FlareDesc">It's a flare. Could be a handy light source.</Entry>
-    <Entry Name="Flashlight">Flashlight</Entry>
-    <Entry Name="FlashlightDesc">Good thing I remembered to bring a flashlight. Shame it's so old it drains a couple of batteries an hour.</Entry>
-    <Entry Name="Glowstick">Glowstick</Entry>
-    <Entry Name="GlowstickDesc">A little ghoulish, but should be a decent fall back if the torch cuts out.</Entry>
-    <Entry Name="Key01">Padlock key</Entry>
-    <Entry Name="Key01Desc">The key for my old padlock.</Entry>
-    <Entry Name="Notebook">Notebook</Entry>
-    <Entry Name="NotebookDesc">A good scientist always keeps a pen and paper handy, just in case.</Entry>
+    <Entry Name="Flashlight">Ліхтарык</Entry>
+    <Entry Name="FlashlightDesc">Добра, што я дадумаўся ўзяць ліхтарык. На жаль ён такі стары, што расходуе некалькі батарэек за гадзіну.</Entry>
+    <Entry Name="Glowstick">Хімічная Крыніца Святла</Entry>
+    <Entry Name="GlowstickDesc">Крыху змрочнае, але павінна быць прыстойным запасным варыянтам, калі ліхтарык згасне.</Entry>
+    <Entry Name="Key01">Ключ ад замка</Entry>
+    <Entry Name="Key01Desc">Ключ ад майго старога замка.</Entry>
+    <Entry Name="Notebook">Нататнік</Entry>
+    <Entry Name="NotebookDesc">Добры навуковец заўсёды трымае ручку і паперу пад рукою, так, на ўсякі выпадак.</Entry>
     <Entry Name="Painkillers">Painkillers</Entry>
     <Entry Name="PainkillersDesc">Well I'd prefer a first aid kit, but at least if I'm injured I can grin and bear it.</Entry>
-    <Entry Name="BoatLock">Padlock</Entry>
-    <Entry Name="BoatLockDesc">It's an old padlock, sure, but it still works.</Entry>
+    <Entry Name="BoatLock">Замок</Entry>
+    <Entry Name="BoatLockDesc">Гэта стары замок, пэўна, але ўсё яшчэ працуе.</Entry>
     <Entry Name="MapFolderDesc">A plastic folder for storing maps.</Entry>
     <Entry Name="MapFolder">Map folder</Entry>
     <Entry Name="StrangeArticle">Copenhagen Post Article</Entry>
@@ -210,13 +210,13 @@
     <Entry Name="YouPickedUp">I've found</Entry>
     <Entry Name="On">On</Entry>
     <Entry Name="Off">Off</Entry>
-    <Entry Name="HealthFine">I'm as fit as can be expected.</Entry>
+    <Entry Name="HealthFine">Я настолькі здаровы, наколькі гэта магчыма.</Entry>
     <Entry Name="HealthCaution">I'm losing blood, but I should be OK.</Entry>
     <Entry Name="HealthDanger">I can't feel my arms and legs anymore. I'm in trouble.</Entry>
-    <Entry Name="BatteryLevel">Battery</Entry>
-    <Entry Name="BatteryLevelDesc1">There's</Entry>
-    <Entry Name="BatteryLevelDesc2">battery power left.</Entry>
-    <Entry Name="Health">Health</Entry>
+    <Entry Name="BatteryLevel">Батарэйкі</Entry>
+    <Entry Name="BatteryLevelDesc1">Засталося</Entry>
+    <Entry Name="BatteryLevelDesc2">зараду батарэек.</Entry>
+    <Entry Name="Health">Здароўе</Entry>
   </CATEGORY>
   <CATEGORY Name="Notebook">
     <Entry Name="TaskList">To do list</Entry>
@@ -382,7 +382,7 @@
     <Entry Name="Notebook:">Нататнік:</Entry>
     <Entry Name="Pers. Notes:">Нататкі:</Entry>
     <Entry Name="Flashlight:">Ліхтарык:</Entry>
-    <Entry Name="Glowstick:">Люмінесцэнтнае святло:</Entry>
+    <Entry Name="Glowstick:">Хімічная Крыніца Святла:</Entry>
     <Entry Name="Sound Volume:">Гучнасць:</Entry>
     <Entry Name="Language:">Мова:</Entry>
     <Entry Name="Resolution:">Разрознасць:</Entry>
@@ -1126,9 +1126,9 @@
     <Entry Name="Euro">Euro</Entry>
     <Entry Name="None">None</Entry>
     <Entry Name="Q">Q</Entry>
-    <Entry Name="LeftMouse">LeftMouse</Entry>
-    <Entry Name="MiddleMouse">MiddleMouse</Entry>
-    <Entry Name="RightMouse">RightMouse</Entry>
+    <Entry Name="LeftMouse">ЛКМ</Entry>
+    <Entry Name="MiddleMouse">СКМ</Entry>
+    <Entry Name="RightMouse">ПКМ</Entry>
     <Entry Name="WheelUp">WheelUp</Entry>
     <Entry Name="WheelDown">WheelDown</Entry>
     <Entry Name="LeftControl">LeftControl</Entry>
