translate 01_02_mine_entrance

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -247,32 +247,32 @@
     <Entry Name="FoundStone03">) калі іх трымаю.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_02_mine_entrance">
-    <Entry Name="DescHatch">I should have known that rusty old ladder wouldn't hold my weight, but I didn't have any choice: I'd rather die down here than suffer that cold any longer.</Entry>
-    <Entry Name="DescBarrel">A heavy looking wooden barrel. Could be anything inside it.</Entry>
-    <Entry Name="DescLockBarrel">No wonder I couldn't open the door...</Entry>
-    <Entry Name="DescWoodDoor1">It's a wooden door. I hope it's open.</Entry>
-    <Entry Name="DescWoodDoor2">A basic wooden door.</Entry>
-    <Entry Name="InteractWoodenDoor">It's stuck, there must be something in the way.</Entry>
-    <Entry Name="TaskLockedDoor">I'm in some kind of underground installation, but the only door out of the room I'm in is locked. Need to find some way around.</Entry>
-    <Entry Name="SceneIntro">Jesus, my head. I can't believe I fell that far and survived. Although, looking around, maybe I didn't... what is this place?</Entry>
-    <Entry Name="SceneIntro02">The hours pass by...</Entry>
-    <Entry Name="DescMetalShelf1">A metal shelf.</Entry>
-    <Entry Name="DescShelf1">This wooden shelf's slowly falling apart.</Entry>
-    <Entry Name="DescPlanks1">This hole's been boarded up a long time ago. The wood looks pretty soft now.</Entry>
-    <Entry Name="InteractPlanks">Old as they are, they won't pull off with my bare hands.</Entry>
-    <Entry Name="TaskPlanks">There's some boards sealing a hole in the wall that I might be able to break through.</Entry>
-    <Entry Name="DescLargeHatch">This hatch is seriously solid, it won't open by hand. Someone obviously wanted to keep people out. Or in.</Entry>
-    <Entry Name="DescHatchToolStatic">This looks like some kind of industrial mechanism, although there's a hole in the centre, and no way to operate it.</Entry>
-    <Entry Name="DescHatchTool">It fits pretty comfortably.</Entry>
-    <Entry Name="DescEndArea">I don't know where this leads, or what's waiting for me, but unless I want to starve to death, it's my only option. Besides, maybe this place has something to do with my father.</Entry>
-    <Entry Name="TutorialHammer01">Let's see... I can swing this hammer if I hold "</Entry>
-    <Entry Name="TutorialHammer02">". I can make a back swing by pulling the mouse right, and then follow through by pushing left. The opposite works too. Pulling back, and then thrusting forward produces a stabbing motion.</Entry>
-    <Entry Name="TutorialHammer04">" after the back swing, I should still be able to look around.</Entry>
-    <Entry Name="TutorialHammer03">I reckon if I hold down "</Entry>
-    <Entry Name="TutorialHammer05">HINT: Penumbra Overture is balanced for mouse based weapon swinging, but if it feels too awkward, a simple version can be chosen from the options menu. Just remember, it takes a bit of time to get used to a new system, so give it a chance before changing.</Entry>
-    <Entry Name="DescRation">It's a 24 hour ration pack, long past its sell by date.</Entry>
-    <Entry Name="DescAmmoBox">Empty boxes of ammunition... what is this place?</Entry>
-    <Entry Name="DescOldShelfs">These shelves are as old as everything else around here, could be over 50 years since anyone's been down here.</Entry>
+    <Entry Name="DescHatch">Я павінен быў дагадацца, што гэтая старая іржавая лесвіца не вытрымае маёй вагі, але ў мяне не было выбару: лепш я памру тут, чым буду далей цярпець гэты холад.</Entry>
+    <Entry Name="DescBarrel">Цяжкая на выгляд драўляная бочка. Унутры можа быць што заўгодна.</Entry>
+    <Entry Name="DescLockBarrel">Не здзіўлены, што не змог адчыніць дзверы...</Entry>
+    <Entry Name="DescWoodDoor1">Драўляныя дзверы. Спадзяваюся, яны адчыненыя.</Entry>
+    <Entry Name="DescWoodDoor2">Звычайныя драўляныя дзверы.</Entry>
+    <Entry Name="InteractWoodenDoor">Загрузла, мусіць, нешта перашкаджае.</Entry>
+    <Entry Name="TaskLockedDoor">Я зараз ў нейкай падземнай інсталяцыі, але адзіныя дзверы з пакоя, у якім я знаходжуся, зачыненыя. Трэба знайсці нейкі выхад.</Entry>
+    <Entry Name="SceneIntro">Божухна, мая галава. Я не магу паверыць, што ўпаў з такой вышыні і вы так далёка і выжыў. Хаця, азіраючыся, можа, і не... што гэта за месца?</Entry>
+    <Entry Name="SceneIntro02">Праходзяць гадзіны...</Entry>
+    <Entry Name="DescMetalShelf1">Металічная паліца.</Entry>
+    <Entry Name="DescShelf1">Гэтая драўляная паліца павольна развальваецца.</Entry>
+    <Entry Name="DescPlanks1">Гэтую дзіру забілі дошкамі ўжо даўно. Цяпер дошкі выглядаюць даволі трухлявымі.</Entry>
+    <Entry Name="InteractPlanks">Якімі б яны ні былі старымі, голымі рукамі іх не адарваць.</Entry>
+    <Entry Name="TaskPlanks">Некалькі дошак заляпляюць дзіру ў сцяне, у якую я мог бы пралезці.</Entry>
+    <Entry Name="DescLargeHatch">Гэты люк вельмі трывалы, ён не адкрыецца ўручную. Нехта, відавочна, хацеў трымаць людзей далей адсюль. Або ўнутры.</Entry>
+    <Entry Name="DescHatchToolStatic">Гэта выглядае як нейкі прамысловы механізм, таксама у цэнтры ёсць дзірка, і кіраваць ім немагчыма.</Entry>
+    <Entry Name="DescHatchTool">Ён сядзіць даволі зручна.</Entry>
+    <Entry Name="DescEndArea">Я не ведаю, куды яно вядзе і што мяне там чакае, але калі я не хачу памерці з голаду, гэта мой адзіны варыянт. Акрамя таго, магчыма, гэтае месца мае нейкае дачыненне да майго бацькі.</Entry>
+    <Entry Name="TutorialHammer01">Паглядзім... Я магу махнуць гэтым малатком, калі трымаю "</Entry>
+    <Entry Name="TutorialHammer02">". Я магу замахнуцца, пацягнуўшы мышшу направа, а затым ударыць, пацягнуўшы мышшу налева. Адваротнае таксама працуе. Адцягванне назад, а затым штуршок наперад вырабляе пранізлівы ўдар.</Entry>
+    <Entry Name="TutorialHammer04">"пасля маху назад я ўсё яшчэ павінен быць здольным азірнуцца.</Entry>
+    <Entry Name="TutorialHammer03">Здаецца, калі зацісну "</Entry>
+    <Entry Name="TutorialHammer05">ПАДКАЗА: Penumbra Overture збалансавана для размахвання зброяй з дапамогай мышкі, але калі гэта здаецца занадта няёмкім, можна выбраць простую версію з меню опцый. Проста памятайце, што патрабуецца некаторы час, каб прывыкнуць да новай сістэмы, таму дайце ёй шанец, перш чым мяняць яе.</Entry>
+    <Entry Name="DescRation">Гэта сутачны рацыён, тэрмін прыдатнасці якога даўно мінуў.</Entry>
+    <Entry Name="DescAmmoBox">Пустыя скрыні з-пад патронаў... што гэта за месца?</Entry>
+    <Entry Name="DescOldShelfs">Гэтыя паліцы такія ж старыя, як і ўсё астатняе тут, магчыма, ніхто тут не быў ужо гадоў 50.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_05_office">
     <Entry Name="DescPaperPile">So much history in this place, tied up in words, and left to decompose.</Entry>
