--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -350,7 +350,7 @@
     <Entry Name="StartNewGame">Start a new game?</Entry>
     <Entry Name="Yes">Так</Entry>
     <Entry Name="No">Не</Entry>
-    <Entry Name="ContinueLastSave">Continue from last save?</Entry>
+    <Entry Name="ContinueLastSave">Працягнуць з апошняга захавання?</Entry>
     <Entry Name="SureQuit">Точна хочаце выйсці?</Entry>
     <Entry Name="Controls">Упраўленне</Entry>
     <Entry Name="Game">Гульня</Entry>
@@ -406,7 +406,7 @@
     <Entry Name="Only Static">Толькі статычныя</Entry>
     <Entry Name="Bilinear">Білінейная</Entry>
     <Entry Name="Trilinear">Трылінейная</Entry>
-    <Entry Name="Empty">..empty..</Entry>
+    <Entry Name="Empty">..пуста..</Entry>
     <Entry Name="Configure Keys">Наладзіць клавішы</Entry>
     <Entry Name="Depth of Field:">Глыбіня рэзкасці:</Entry>
     <Entry Name="Holster:">Кабура:</Entry>
@@ -416,28 +416,28 @@
     <Entry Name="New Game">Новая гульня</Entry>
     <Entry Name="Options">Налады</Entry>
     <Entry Name="Exit">Выхад</Entry>
-    <Entry Name="Auto Saves">Auto Saves</Entry>
-    <Entry Name="Saved Games">Save Spots</Entry>
-    <Entry Name="Favorites">Favorites</Entry>
-    <Entry Name="Load">Load</Entry>
-    <Entry Name="Remove">Remove</Entry>
-    <Entry Name="Add To Favorites">Add To Favorites</Entry>
+    <Entry Name="Auto Saves">Аўта-захаванні</Entry>
+    <Entry Name="Saved Games">Захаванні</Entry>
+    <Entry Name="Favorites">Улюбёнае</Entry>
+    <Entry Name="Load">Загрузіць</Entry>
+    <Entry Name="Remove">Выдаліць</Entry>
+    <Entry Name="Add To Favorites">Дадаць у ўлюбёнае</Entry>
     <Entry Name="Easy">Лёгка</Entry>
     <Entry Name="EasyDesc">Для ігракоў, у якіх усё дрэнна з экшн-гульнямі.</Entry>
     <Entry Name="Normal">Звычайна</Entry>
     <Entry Name="NormalDesc">Рэкамендаваны, падыходзіць большасці ігракоў.</Entry>
     <Entry Name="Hard">Беларус</Entry>
     <Entry Name="HardDesc">Для ігракоў, якія шукаюць сапраўдных выпрабаванняў.</Entry>
-    <Entry Name="Resume">Back to game</Entry>
-    <Entry Name="Welcome">Welcome to Penumbra: Overture,</Entry>
-    <Entry Name="Too Improve">To improve your experience, please follow the advice below.</Entry>
-    <Entry Name="StartTip1">1. Turn off all lights.</Entry>
-    <Entry Name="StartTip2">2. Turn contrast to max.</Entry>
-    <Entry Name="StartTip3">3. Adjust brightness so the image below is barely visible.</Entry>
-    <Entry Name="StartTip4">4. If image is still to dark / bright please gamma control in options.</Entry>
+    <Entry Name="Resume">Аднавіць</Entry>
+    <Entry Name="Welcome">Вітаем у Penumbra: Overture,</Entry>
+    <Entry Name="Too Improve">Каб палепшыць гульнявы досвед, калі ласка, прытрымлівайцеся наступных парад.</Entry>
+    <Entry Name="StartTip1">1. Выключыце святло.</Entry>
+    <Entry Name="StartTip2">2. Пастаўце кантраст на максімум.</Entry>
+    <Entry Name="StartTip3">3. Адрыгулюйце яркасць такім чынам, каб выява ніжэй была амаль бачнай.</Entry>
+    <Entry Name="StartTip4">4. Калі выява ўсё адно занадта цёмная/яркая, змяніце налады гаммы.</Entry>
     <Entry Name="DisablePersonal:">Дадаваць нататкі:</Entry>
-    <Entry Name="AllowQuickSave:">Allow quick save:</Entry>
-    <Entry Name="SimpleSwing:">Simple swing:</Entry>
+    <Entry Name="AllowQuickSave:">Дазволіць хуткае захаванне:</Entry>
+    <Entry Name="SimpleSwing:">Звычайны ўзмах:</Entry>
     <Entry Name="PreMenuText">Ёсць пэўныя рэчы, якія мне ад цябе патрэбны. Рэчы, якія ты не зразумееш, а мабыць і не захочаш, але калі ласка, не рабі тых самых памылак, што і я. [br][br]Мой бацька, Говард, пакінуў мяне яшчэ да нараджэння. Я мог бы сказаць, што страта маёй маці і пісьмо, якое я атрымаў пасля яе пахавання, асляпілі мяне да таго, што я павінен быў рабіць. Гэта была б хлусня: [br][br]Чалавечая прырода вызначыла маё падзенне.[br][br]Маё імя Філіп. Калі пашанцуе, я ўжо буду мёртвым, калі ты гэта атрымаеш.[br][br]Калі лёс не складзецца, мы ўсе загінем.</Entry>
     <Entry Name="CreditsText">*PENUMBRA: OVERTURE[br]*Episode One[br][br][br][br][br][br][br][br][br][br][br]*FRICTIONAL GAMES[br][br][br][br][br]*Lead Programming[br]Thomas Grip[br][br][br]*Additional Programming[br]Luis Rodero Morales[br]Edward Rudd[br][br][br]*Lead Graphics[br]Anton Adamse[br][br][br]*Additional Graphics[br]Emil Meiton[br][br][br]*Sound[br]Jens Nilsson[br][br][br]*Music[br]Mikko Tarmia[br][br][br]*Level Scripting[br]Jens Nilsson[br]Thomas Grip[br][br][br]*Written by[br]TJ Jubert[br][br][br]*Voice Talent[br]Mike Hillard[br][br][br]*Logos[br]Niklas Mattisson[br][br][br]*Special Thanks to[br]Newton Game Dynamics[br]Angel Script[br]Troy A Gusler II[br]Marc Nicander[br]Near and dear for all support[br][br][br]*Beta Testing[br]Henrik Larsson[br]Cedric Guillemet[br]Anton Lenander[br]Petter Flink[br]Tim Soret[br][br][br][br][br][br][br][br][br]For more information on the next episode[br][br]*www.Penumbra-Overture.com</Entry>
     <Entry Name="Subtitle:">Субцітры:</Entry>
