translate 01_03_shafts category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -572,43 +572,43 @@
     <Entry Name="DescDog">A horrible sight, luckily it's mummified or else the smell would have been awful.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_03_shafts">
-    <Entry Name="EventEntrance01">It's stuck. I'm trapped! I need to get out!</Entry>
-    <Entry Name="DescParaffin">This place must be old if they were still using paraffin lamps. Looks like there's still some juice left.</Entry>
-    <Entry Name="DescParaffin02">There's still some paraffin in the base of this lantern.</Entry>
-    <Entry Name="EventZippoOnBarrel">There could be 20 kilos of explosive in here. I'm not lighting it without a fuse.</Entry>
-    <Entry Name="EventFuseOnBarrel01">I don't want to risk this thing going off before I'm ready.</Entry>
-    <Entry Name="EventTakeCover">The fuse is running faster than I thought, got to take cover!</Entry>
-    <Entry Name="DescTNT01">Trinitrotoluene. Could have been used for mining operations, but I don't see a fuse.</Entry>
-    <Entry Name="DescTNT02">I've got the fuse sorted, one spark and this thing should go up a treat. I just hope it doesn't take me with it.</Entry>
-    <Entry Name="DescCave01">The shaft's caved in here, could have happened years ago. I shouldn't be risking my life like this, the whole facility could come down around me. Still, if I want to press on, I'll have to clear this obstruction somehow. There must be something left here I could use... maybe there's still some industrial explosives lying around.</Entry>
-    <Entry Name="DescExit">It's not much of an opening, but it'll have to do. Potholing has always terrified me.</Entry>
-    <Entry Name="EventDog01">Oh God, is there something else down here with me?</Entry>
-    <Entry Name="EventDog02">I can't just wait here for whatever's round that corner. Need to hide.</Entry>
-    <Entry Name="EventShaftDoor01">It's locked.</Entry>
-    <Entry Name="DescBox01">A wooden box.</Entry>
-    <Entry Name="DescBox02">A large wooden box.</Entry>
-    <Entry Name="DescWheels01">Great, rusting iron wheels, remnants of a past age of industry.</Entry>
-    <Entry Name="DescWheels02">Old cart wheels and some other scrap.</Entry>
-    <Entry Name="DescPile01">Ancient bags of crumbling cement.</Entry>
-    <Entry Name="DescPile02">I don't know what this is in these bags. Mining slag maybe...</Entry>
-    <Entry Name="DescMachine">This old cement mixer's seen better days.</Entry>
-    <Entry Name="DescStuff">Lot's of useless junk. At best, it could be a decent hiding spot.</Entry>
-    <Entry Name="TutorialSneak01">There could be anything living down here. Heroics are for Hollywood actors, and fairy tales. I'm not taking any chances - if I face off against anything down here, I won't last a second. Caution and stealth are my only defences now.</Entry>
-    <Entry Name="TutorialSneak02_1">If anyone, or anything, hears me, I'd be best off staying low and out of sight until I know whether or not it's a threat. Crouching by pressing '</Entry>
-    <Entry Name="TutorialSneak02_2">' will give me the chance to hide in the shadows. I'll know I've got it right because of the blue tint to my vision. Plus, I should be quiet enough that I won't be heard unless something's right on top of me. Better remember to shut off any light sources, though.</Entry>
-    <Entry Name="TutorialSneak03">My best bet is to hide for a couple of seconds or so, perfectly still. That'll make me properly hidden.</Entry>
-    <Entry Name="TutorialSneak04">Like that, I'll be virtually invisible, and after some time, I should get my night vision back, provided I stay still.</Entry>
-    <Entry Name="TutorialSneak05">Jesus... I've never been this scared in my life... I can feel my heart racing. If anything gets within more than a few feet of my hiding spot, I'd better not stare it out. Anything within my field of vision might panic me, and then I'm a gonner.</Entry>
-    <Entry Name="EventDogComes">Hmm, it might be a good idea to block the door. If that dog creature is back there I don't want it sneaking up on me.</Entry>
-    <Entry Name="EventNeedCode">There must be a code somewhere, better to find it than attempt further trial and errors.</Entry>
-    <Entry Name="EventNeedCodeDoorLocked">It's locked, I probably need to use the panel to input a code.</Entry>
-    <Entry Name="EventFoundExit">This must be the only exit and it has caved in!</Entry>
-    <Entry Name="EventNeedCodeDoorLocked02">It's locked.</Entry>
-    <Entry Name="EventStringOnBarrel">It's only a cotton string, it won't work as a fuse.</Entry>
-    <Entry Name="EventSoakedStringOnBarrel">I can't ignite a soaked string, it has to be a proper fuse!</Entry>
-    <Entry Name="DescRocks">Heavy, but I could lift it. Could do a lot of damage to anything underneath it.</Entry>
-    <Entry Name="DescCanisters">Not as heavy as it looks, still it should serve as some form of weapon if I have to defend myself.</Entry>
-    <Entry Name="DescPanel">A key panel? Oddly placed and it's definitely newer than the rest of the mine.</Entry>
+    <Entry Name="EventEntrance01">Засела. Я ў пастцы! Трэба выбірацца адсюль!</Entry>
+    <Entry Name="DescParaffin">Гэтае месца павінна быць сапраўды старым, калі тут яшчэ выкарыстоўвалі парафінавыя лямпы. Здаецца, там магло застацца крыху масла.</Entry>
+    <Entry Name="DescParaffin02">Яшчэ засталося крыху парафіну на дне гэтай лямпы.</Entry>
+    <Entry Name="EventZippoOnBarrel">Тут недзе 20 кіло выбухоўкі. Я не буду падпальваць яе без запала.</Entry>
+    <Entry Name="EventFuseOnBarrel01">Не хачу, каб гэтая штука спрацавала хутчэй, чым я падрыхтуюся.</Entry>
+    <Entry Name="EventTakeCover">Запал згарае хутчэй, чым я спадзяваўся, трэба ў укрыццё!</Entry>
+    <Entry Name="DescTNT01">Трынітраталуол. Магчыма выкарыстоўваўся пры раскопках. , але я не бачу запала.</Entry>
+    <Entry Name="DescTNT02">Я ўсталяваў запал, адна іскра -- і ўсё тут паляціць к чорту, спядзяюся, толькі, што не палячу разам з ім.</Entry>
+    <Entry Name="DescCave01">Шахта тут абвалілася, гэта магло здарыцца шмат гадоў таму. Не трэба так рызыкаваць сваім жыццём, увесь комплекс можа абваліцца вакол мяне. Тым не менш, калі я хачу прайсці далей, мне трэба будзе неяк пазбавіцца ад гэтай перашкоды. Тут павінна было застацца што-небудзь, што я змог бы выкарыстаць... можа, тут яшчэ валяецца якая-небудзь прамысловая выбухоўка.</Entry>
+    <Entry Name="DescExit">Не такая ўжо і вялікая, але гэтага павінна хапіць. Выбоіны заўсёды выклікалі ў мяне жах.</Entry>
+    <Entry Name="EventDog01">Божухна, няўжо тут ёсць нехта акрамя мяне?</Entry>
+    <Entry Name="EventDog02">Я не магу проста чакаць тут пакуль яно выйдзе з-за вугла. Трэба хавацца.</Entry>
+    <Entry Name="EventShaftDoor01">Зачынена.</Entry>
+    <Entry Name="DescBox01">Драўляная скрынка.</Entry>
+    <Entry Name="DescBox02">Драўляная скрыня.</Entry>
+    <Entry Name="DescWheels01">Цудоўна, іржавыя жалезныя колы, рэшткі мінулай прамысловай эры.</Entry>
+    <Entry Name="DescWheels02">Старыя колы ад каляскі і яшчэ нейкі лом.</Entry>
+    <Entry Name="DescPile01">Старыя мяшкі з патрэсканым цэментам.</Entry>
+    <Entry Name="DescPile02">Не ведаю, што ў гэтым мяшках. Мабыць нейкі шлак...</Entry>
+    <Entry Name="DescMachine">Гэтая старая бетонамяшалка пабачыла жыццё.</Entry>
+    <Entry Name="DescStuff">Шмат бескарыснага смецця. У лепшым выпадку, гэта будзе прыстойным сховішчам.</Entry>
+    <Entry Name="TutorialSneak01">Тут можа жыць што невядома хто. Гераізм для галівудскіх актораў і герояў казак. Я рызыкаваць не буду - калі сустрэнуся з чымсьці тут, то не пратрымаюся і секунды. Асцярожнасць і скрытнасць цяпер - мая адзіная абарона.</Entry>
+    <Entry Name="TutorialSneak02_1">Калі хтосьці, ці штосьці пачуе мяне, лепей будзе трымацца далей ад ягоных вачэй, пакуль не разбяруся, ці ёсць якая пагроза. Прыгнуўшыся націскаючы на '</Entry>
+    <Entry Name="TutorialSneak02_2">' я атрымаю магчымасць схавацца ў цені. Я зразумею, што зрабіў усё правільна па блакітнаму адценню свайго зроку. Таксама, трэба заставацца дастаткова ціхім, каб мяне ніхто не пачуў, калі ён толькі не падыдзе ўсутыч. Лепш не забыцца выключыць усе крыніцы святла, аднак.</Entry>
+    <Entry Name="TutorialSneak03">Мой лепшы варыянт - гэта схавацца на пару секунд ці каля таго і не варушыцца. Так я буду дастаткова схаваным.</Entry>
+    <Entry Name="TutorialSneak04">Вось так, я буду амаль нябачным, а праз некаторы час да мяне вернецца начны зрок, калі я не буду варушыцца.</Entry>
+    <Entry Name="TutorialSneak05">Божухна... я ніколі ў жыцці так не палохаўся... Я адчуваю, як б'ецца маё сэрца. Калі яно падыйдзе да майго сховішча бліжэй чым на некалькі футаў, мне лепей на яго не глядзець. Мяне можа напалохаць ўсё, што пападзе ў поле зроку, і тады я нябожчык.</Entry>
+    <Entry Name="EventDogComes">Хм, было б добра заблакаваць гэтыя дзверы. Калі гэты сабака там, я не хацеў бы, каб ён падкраўся да мяне.</Entry>
+    <Entry Name="EventNeedCode">Недзе павінен быць код, лепш знайсці яго, чым далей намагацца ўгадаць.</Entry>
+    <Entry Name="EventNeedCodeDoorLocked">Зачынена, здаецца, трэба ўвесці код на гэтай панэлі.</Entry>
+    <Entry Name="EventFoundExit">Гэта павінен быць адзіны выхад, і ён абваліўся!</Entry>
+    <Entry Name="EventNeedCodeDoorLocked02">Зачынена.</Entry>
+    <Entry Name="EventStringOnBarrel">Проста баваўняная нітка, можна выкарыстаць у якасці запала.</Entry>
+    <Entry Name="EventSoakedStringOnBarrel">Я не магу падпаліць прамоклую нітку, гэта павінен быць належны запал!</Entry>
+    <Entry Name="DescRocks">Цяжкі, але я змагу падняць. Можа нанесці вялікую шкоду таму, што знаходзіцца пад ім.</Entry>
+    <Entry Name="DescCanisters">Не такі цяжкі, як здаецца, тым не менш, можа быць нечым падобным на зброю, калі мне давядзецца абараняць сябе.</Entry>
+    <Entry Name="DescPanel">Панэль кіравання? Дзіўна размешчаная, і, безумоўна, навейшая за астатнюю частку шахты.</Entry>
   </CATEGORY>
   <CATEGORY Name="Player">
     <Entry Name="ObjectTooFar">It's too far away.</Entry>
